# webtube

./: .replit  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
webtube/: __main__.py  app.py  wsgi.py
webtube/static/: script.js  style.css
webtube/templates/: index.html
