[tool.poetry]
name = "webtube"
version = "0.1.0"
description = "A simple software framework to play youtube video songs."
authors = ["MayankFawkes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.1.0"
gunicorn = "^20.1.0"
"youtube.py" = "^1.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
